# PAOO

Tema1/: CMakeLists.txt  main.cpp
Tema1/src/: shape.h  square.h
Tema3/: CMakeLists.txt  main.cpp  square.h
