# CMakeList.txt : CMake project for Tema3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Tema3")

# Add source to this project's executable.
add_executable (Tema3     "square.h" "main.cpp")

# TODO: Add tests and install targets if needed.
